refactor backend service classes