@@ -9,28 +9,22 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-public class PlayerServiceImpl implements PlayerService {
+public class PlayerServiceImpl extends PlayerService {
 
     private final PlayerRepository playerRepository;
     private final PlayerMapper playerMapper;
     private final DtoEnricher<PlayerDto> playerDtoEnricher;
 
     @Override
-    public List<Player> getAll() {
-        return playerRepository.findAll();
-    }
-
-    @Override
-    public List<PlayerDto> getAllPlayerDtos() {
-        List<Player> players = this.getAll();
+    public List<PlayerDto> getAll() {
+        List<Player> players = playerRepository.findAll();
         return players.stream()
                 .map(playerMapper::playerEntityToDto)
                 .peek(playerDtoEnricher::enrich)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
