@@ -12,14 +12,14 @@ import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
-import java.util.Arrays;
+import java.util.List;
 
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 
 @ExtendWith(MockitoExtension.class)
 class ScoreControllerTest {
@@ -38,11 +38,11 @@ class ScoreControllerTest {
 
     @Test
     void getScores() throws Exception {
-        when(scoreService.getAllScoreDto()).thenReturn(Arrays.asList(new ScoreDto()));
+        when(scoreService.getAll()).thenReturn(List.of(new ScoreDto()));
 
         mockMvc.perform(get("/api/scores"))
                 .andExpect(status().isOk())
                 .andExpect(content().contentType(MediaType.APPLICATION_JSON));
-        verify(scoreService, times(1)).getAllScoreDto();
+        verify(scoreService, times(1)).getAll();
     }
 }
